--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   min-height: 100vh;
+  background-color: #22b6f0;
   background: linear-gradient(to bottom, #5b6cb2, #22b6f0);
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -143,3 +144,4 @@ a {
 .nav-link {
   text-decoration: none;
 }
+
