--- a/style.css
+++ b/style.css
@@ -13,7 +13,12 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+ 
 }
+html, body {
+  overflow-x: hidden;
+}
+
 
 
 .nav-container {
@@ -146,24 +151,34 @@ a {
 }
 #photos {
   display: flex;
-  gap: 1rem;
   overflow-x: auto;
-  padding: 1rem;
   scroll-snap-type: x mandatory;
+  scroll-padding: 0 1rem;
+  gap: 1rem;
+  padding: 1rem;
+  justify-content: start;
   -webkit-overflow-scrolling: touch;
-}
+  }
+
 
 #photos img.screenshot {
   flex: 0 0 auto;
-  width: 300px; 
+  width: 80vw;
+  max-width: 350px;
+  scroll-snap-align: center;
   border-radius: 20px;
-  scroll-snap-align: start;
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease;  overflow-x: hidden;
+  overflow-y: hidden;
 }
+
+
+
+
 
 #photos img.screenshot:hover {
   transform: scale(1.03);
 }
+
 
 @media (max-width: 1137px) {
   .scroll-down {
@@ -171,3 +186,9 @@ a {
 } 
   }
   
+  @media (min-width: 768px) {
+  #photos img.screenshot {
+    flex: 0 0 auto;
+    width: 300px;
+  }
+}
